deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-py-app
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py
            image: wwppk/myapp:v1
            ports:
              - name: web 
                containerPort: 80
#            livenessProbe:
#              httpGet:
#                port: 80
#                path: /myapp/
#              initialDelaySeconds: 10
#              periodSeconds: 5
#              timeoutSeconds: 2
#            readinessProbe:
#              httpGet:
#                port: 80
#                path: /myapp/health
#              initialDelaySeconds: 10
#              periodSeconds: 5
#              timeoutSeconds: 2
